option('introspection',
       type: 'feature',
       value: 'auto',
       yield: true,
       description: 'Build introspection data (requires gobject-introspection)')

option('pixbuf-loader',
       type: 'feature',
       value: 'enabled',
       yield: true,
       description: 'Build the GDK-Pixbuf SVG loader (requires gdk-pixbuf-query-loaders)'
       )

option('docs',
       type: 'feature',
       value: 'auto',
       yield: true,
       description: 'Build API reference and rsvg-convert documentation (requires gi-docgen and rst2man)')

option('vala',
       type: 'feature',
       value: 'auto',
       yield: true,
       description: 'Build Vala bindings (requires the vala compiler)')

option('tests',
       type: 'feature',
       value: 'auto',
       yield: true,
       description: 'Enable the librsvg-c tests')

option('triplet',
       type: 'string',
       value: '',
       description : 'Rust target triplet (if needed)')

option('rustc-version',
       type: 'string',
       value: '',
       description: 'Installed RustC version to use (if needed; currently only supported for Windows builds)')
