[package]
name = "rsvg-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
cairo-rs = { version = "0.21" }
glib = "0.21"
gio = "0.21"
libfuzzer-sys = "0.4"
librsvg = { path = "../rsvg" }

# Prevent this from interfering with workspaces
# [workspace]
# members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "render_document"
path = "fuzz_targets/render_document.rs"
test = false
doc = false
