[package]
name = "librsvg-c"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
cairo-rs = { version = "0.18", features=["v1_16", "png", "pdf", "ps", "svg"] }
cast = "0.3.0"
float-cmp = "0.9.0"
gdk-pixbuf = "0.18"
gio = "0.18"
glib = "0.18"
libc = "0.2"
rsvg = { path = "../rsvg", features = ["c-api"] }
once_cell = "1.2.0"
url = "2"

[build-dependencies]
regex = "1.7.1"

[dev-dependencies]
rsvg = { path = "../rsvg", features = ["c-api"] }

[lib]
crate-type = [ "staticlib", "rlib" ]
